@@ -155,5 +155,14 @@ function dblog_update_7002() {
 }
 
 /**
+ * Account for possible legacy systems where dblog was not installed.
+ */
+function dblog_update_7003() {
+  if (!db_table_exists('watchdog')) {
+    db_create_table('watchdog', drupal_get_schema_unprocessed('dblog', 'watchdog'));
+  }
+}
+
+/**
  * @} End of "addtogroup updates-7.x-extra".
  */
