@@ -1,6 +1,7 @@
 
 Drupal 7.51, xxxx-xx-xx (development version)
 -----------------------
+- Exceptions thrown in dblog_watchdog() are now caught and ignored.
 - Numerous API documentation improvements.
 
 Drupal 7.50, 2016-07-07 
